--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <div class="content text-center">
     <h1 class="text-dark">AREAS OF EXPERTISE</h1>
     
-    <nav class="navbar bg-dark shadow" style="height: 1mm; margin-left: 6.5cm; width: 8cm;">
+    <nav class="navbar bg-white shadow" style="height: 1mm;  width: 8cm;">
       <div class="container-fluid">
         
       </div>
