--- a/touch.html
+++ b/touch.html
@@ -119,6 +119,7 @@
                 
               </nav>
               <button type="submit">Send</button>
+              <input type="hidden" name="_captcha" value="false">
               <input type="hidden" name="_subject" value="New submission!">
               <input type="text" name="_honey" style="display:none">
               <input type="hidden" name="_next" value="https://threeservo.com/thanks.html">
