--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href='fonts/Zanzabar D.otf' rel='stylesheet' type='text/css'>
 
     <title>Best service for companys - ThreeServo</title>
+    <link rel="icon" href="images/3s logo.png" type="image/icon type">
 </head>
 <style>.banner-image{
     
