--- a/touch.html
+++ b/touch.html
@@ -60,10 +60,7 @@
               <a class="nav-link text-white" href="index.html#aboutus">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Pricing</a>
+              <a class="nav-link text-secondary disabled" href="#">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link bg-secondary shadow text-white disabled " href="#">Get In Touch</a>
@@ -92,7 +89,7 @@
       <div class="spContainer mx-auto">
         <div class="card px-4 py-5  shadow">
           <div class="d-inline text-left ">
-            <h3 class="font-weight-bold">fill your informations</h3>
+            <h3 class="font-weight-bold border-bottom border-5 border-dark">fill your informations</h3>
             <p>we will contact you ASAP!</p>
           </div>
           <div class="d-inline text-center mb-0">
