--- a/thanks.html
+++ b/thanks.html
@@ -60,10 +60,7 @@
               <a class="nav-link text-white" href="index.html#aboutus">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Pricing</a>
+              <a class="nav-link text-secondary disabled" href="#">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link bg-secondary shadow text-white disabled " href="#">Get In Touch</a>
@@ -82,8 +79,8 @@
 </div>
 </div>
 <nav class="navbar bg-white d-flex justify-content-center align-items-center" style="height: 100px;">
-    <div class="container-fluid text-center">
-      <h1>Enroll Now</h1>
+    <div class="container-fluid text-center border-bottom border-5 border-dark">
+      <h1>we will contact you</h1>
     </div>
     
   </nav>
