--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <link href='fonts/Zanzabar D.otf' rel='stylesheet' type='text/css'>
 
-    <title>Best service for companys - ThreeServo</title>
+    <title>Best service for companies - ThreeServo</title>
     <link rel="icon" href="images/3s logo.png" type="image/icon type">
 </head>
 <style>.banner-image{
